--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/logoIcon.png" />
+    <link rel="icon" type="image/svg+xml" href="/logoIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cavite State University Tanza Campus Library</title>
+    <link rel="stylesheet" href="./scss/main.css">
 </head>
 
 <body>
